@@ -73,7 +73,7 @@ class CUrlValidator extends CValidator
 	 */
 	public function validateValue($value)
 	{
-		if(is_string($value))
+		if(is_string($value) && strlen($value)<2000)  // make sure the length is limited to avoid DOS attacks
 		{
 			if($this->defaultScheme!==null && strpos($value,'://')===false)
 				$value=$this->defaultScheme.'://'.$value;
