@@ -44,6 +44,7 @@ Version 1.1.8 work in progress
 - Enh: CJSON::encode() can now encode non-UTF8 data (Qiang)
 - Enh: Added CLogger::autoDump to allow writing log messages to destinations in "real time" (Qiang)
 - Enh: Added support for using custom URL rule classes with CUrlManager (Qiang)
+- Enh: Added input length check to email and url validators to improve security (Qiang)
 - Chg #2261: Upgraded HTMLPurifier to v4.3.0 (Sam Dark)
 - Chg #2309: Changed XML mimetype to application/xml for more interoperability (Sam Dark)
 - Chg #2401: Upgraded jQuery to 1.6.1 (Sam Dark)
